--- a/Pitch/Views/User Profile Views/BioCell.xib
+++ b/Pitch/Views/User Profile Views/BioCell.xib
@@ -9,35 +9,42 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="GothamRounded-Book.otf">
+            <string>GothamRounded-Book</string>
+        </array>
+        <array key="GothamRounded-Medium.otf">
+            <string>GothamRounded-Medium</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BioCell" rowHeight="198" id="KGk-i7-Jjw" customClass="BioCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="198"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BioCell" rowHeight="80" id="KGk-i7-Jjw" customClass="BioCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="197.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Bio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="By9-XS-RWH">
-                        <rect key="frame" x="10" y="10" width="0.0" height="147.5"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                        <rect key="frame" x="10" y="5" width="29" height="24"/>
+                        <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QZ9-E5-lWe">
-                        <rect key="frame" x="290" y="10" width="20" height="147.5"/>
+                        <rect key="frame" x="278" y="5" width="32" height="24"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                         <state key="normal" title="Edit"/>
                     </button>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="G1k-NS-0kI">
-                        <rect key="frame" x="10" y="167.5" width="300" height="20"/>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="Text View text" translatesAutoresizingMaskIntoConstraints="NO" id="G1k-NS-0kI">
+                        <rect key="frame" x="10" y="39" width="305" height="35.5"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20" id="E4a-vZ-45Z"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="E4a-vZ-45Z"/>
                         </constraints>
-                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="16"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                 </subviews>
@@ -45,21 +52,20 @@
                     <constraint firstItem="By9-XS-RWH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="2EP-oB-OaF"/>
                     <constraint firstItem="QZ9-E5-lWe" firstAttribute="centerY" secondItem="By9-XS-RWH" secondAttribute="centerY" id="8vc-Fd-u3m"/>
                     <constraint firstItem="G1k-NS-0kI" firstAttribute="top" secondItem="QZ9-E5-lWe" secondAttribute="bottom" constant="10" id="GGh-7K-KJO"/>
-                    <constraint firstItem="By9-XS-RWH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="IoI-KF-u1E"/>
+                    <constraint firstItem="By9-XS-RWH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="IoI-KF-u1E"/>
                     <constraint firstAttribute="trailing" secondItem="QZ9-E5-lWe" secondAttribute="trailing" constant="10" id="NKg-ad-U9V"/>
-                    <constraint firstAttribute="bottom" secondItem="G1k-NS-0kI" secondAttribute="bottom" constant="10" id="WXA-PF-edi"/>
-                    <constraint firstAttribute="trailing" secondItem="G1k-NS-0kI" secondAttribute="trailing" constant="10" id="cXg-Wk-sZv"/>
+                    <constraint firstAttribute="bottom" secondItem="G1k-NS-0kI" secondAttribute="bottom" constant="5" id="WXA-PF-edi"/>
+                    <constraint firstAttribute="trailing" secondItem="G1k-NS-0kI" secondAttribute="trailing" constant="5" id="cXg-Wk-sZv"/>
                     <constraint firstItem="G1k-NS-0kI" firstAttribute="leading" secondItem="By9-XS-RWH" secondAttribute="leading" id="dFh-RJ-UyK"/>
-                    <constraint firstItem="QZ9-E5-lWe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="rpI-T7-let"/>
-                    <constraint firstItem="QZ9-E5-lWe" firstAttribute="leading" secondItem="By9-XS-RWH" secondAttribute="trailing" constant="280" id="zVK-Ta-oRD"/>
+                    <constraint firstItem="QZ9-E5-lWe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="rpI-T7-let"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
                 <outlet property="bioTextView" destination="G1k-NS-0kI" id="yeQ-gE-5z2"/>
-                <outlet property="editUserBioButton" destination="QZ9-E5-lWe" id="0ns-se-ZHC"/>
+                <outlet property="editUserBioButton" destination="QZ9-E5-lWe" id="4hh-bl-BqY"/>
             </connections>
-            <point key="canvasLocation" x="46.399999999999999" y="98.050974512743636"/>
+            <point key="canvasLocation" x="46.399999999999999" y="44.977511244377816"/>
         </tableViewCell>
     </objects>
 </document>
