--- a/Pitch/Views/User Profile Views/BioCell.xib
+++ b/Pitch/Views/User Profile Views/BioCell.xib
@@ -39,7 +39,7 @@
                         <state key="normal" title="Edit"/>
                     </button>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="Text View text" translatesAutoresizingMaskIntoConstraints="NO" id="G1k-NS-0kI">
-                        <rect key="frame" x="10" y="39" width="305" height="35.5"/>
+                        <rect key="frame" x="6" y="39" width="309" height="35.5"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="E4a-vZ-45Z"/>
@@ -55,8 +55,8 @@
                     <constraint firstItem="By9-XS-RWH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="IoI-KF-u1E"/>
                     <constraint firstAttribute="trailing" secondItem="QZ9-E5-lWe" secondAttribute="trailing" constant="10" id="NKg-ad-U9V"/>
                     <constraint firstAttribute="bottom" secondItem="G1k-NS-0kI" secondAttribute="bottom" constant="5" id="WXA-PF-edi"/>
+                    <constraint firstItem="G1k-NS-0kI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="6" id="bKc-il-MFJ"/>
                     <constraint firstAttribute="trailing" secondItem="G1k-NS-0kI" secondAttribute="trailing" constant="5" id="cXg-Wk-sZv"/>
-                    <constraint firstItem="G1k-NS-0kI" firstAttribute="leading" secondItem="By9-XS-RWH" secondAttribute="leading" id="dFh-RJ-UyK"/>
                     <constraint firstItem="QZ9-E5-lWe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="rpI-T7-let"/>
                 </constraints>
             </tableViewCellContentView>
