--- a/Pitch/Views/User Profile Views/BioCell.xib
+++ b/Pitch/Views/User Profile Views/BioCell.xib
@@ -28,18 +28,18 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Bio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="By9-XS-RWH">
-                        <rect key="frame" x="10" y="5" width="29" height="29.5"/>
+                        <rect key="frame" x="10" y="5" width="29" height="26.5"/>
                         <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QZ9-E5-lWe">
-                        <rect key="frame" x="278" y="5" width="32" height="29.5"/>
+                        <rect key="frame" x="278" y="5" width="32" height="26.5"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                         <state key="normal" title="Edit"/>
                     </button>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Text View text" translatesAutoresizingMaskIntoConstraints="NO" id="G1k-NS-0kI">
-                        <rect key="frame" x="6" y="44.5" width="309" height="30"/>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="Text View text" translatesAutoresizingMaskIntoConstraints="NO" id="G1k-NS-0kI">
+                        <rect key="frame" x="6" y="41.5" width="309" height="33"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="E4a-vZ-45Z"/>
@@ -48,7 +48,7 @@
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="40" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vdo-IS-nGS">
-                        <rect key="frame" x="249" y="9.5" width="21" height="21"/>
+                        <rect key="frame" x="249" y="8" width="21" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
